--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,9 @@ body {
     max-width: 900px;
     margin: 0 auto;
 }
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
