--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,18 @@ body {
     justify-content: space-between;
     align-items: center;
 }
+
+.logo img {
+    width: 50px;
+}
+
+ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    margin: 0 10px;
+}
