--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,16 @@ ul {
 li {
     margin: 0 10px;
 }
+
+.nav button {
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 8px 25px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: mediumturquoise;
+    color: #fff;
+}
