--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,7 @@ button:hover {
     background-color: mediumturquoise;
     color: #fff;
 }
-=======
-}
->>>>>>> Stashed changes
+>>>>>>>
 a {
     text-decoration: none; 
     color: black;
@@ -166,4 +164,70 @@ footer {
 .up:hover {
     animation: skiplinkmove 0.3s ease-in-out;
     animation-iteration-count: infinite;
+}
+
+@keyframes skiplinkmove {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-10px);
+    }
+    100% {
+      transform: translateY(0);
+    }
+}
+  
+.up i {
+    vertical-align: middle;
+}
+
+.titre {
+    text-align: center;
+}
+
+.titre h3 {
+    font-weight: lighter;
+}
+
+.hotels {
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    gap: 20px; 
+    background-color: turquoise;
+    margin-bottom: 40px;
+    border: solid black;
+    border-radius: 5px;
+}
+
+.hotel img {
+    width: 100%; 
+    height: 100%;
+}
+
+.description h3 {
+    font-size: 30px;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+}
+
+.button-container {
+    display: flex;
+    align-items: center; 
+    margin-bottom: 5px;
+}
+
+.button-container button {
+    background-color: #fff;
+}
+
+.project {
+    background-color: turquoise;
+    padding: 8px;
+    border: solid black;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
