--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    max-width: 900px;
+    font-family: 'Josefin Sans', sans-serif;    max-width: 900px;
     margin: 0 auto;
 }
 
@@ -23,10 +22,9 @@ ul {
 
 li {
     margin: 0 10px;
-<<<<<<< Updated upstream
 }
 
-.nav button {
+.nav a {
     border: 2px solid black;
     border-radius: 5px;
     padding: 8px 25px;
@@ -34,13 +32,11 @@ li {
     cursor: pointer;
 }
 
-button:hover {
+.nav a:hover {
     background-color: mediumturquoise;
     color: #fff;
 }
-=======
-}
->>>>>>> Stashed changes
+
 a {
     text-decoration: none; 
     color: black;
@@ -91,7 +87,6 @@ text-align: center;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-<<<<<<< HEAD
 }
 
 .lieux {
@@ -128,8 +123,17 @@ text-align: center;
 }
 
 iframe {
+    border: 1px solid black;
     width: 100%;
-    height:500px ;
+    height:500px;
+}
+
+audio {
+    width: 100%;
+}
+
+video {
+    width: 100%;
 }
 
 footer {
@@ -224,9 +228,11 @@ footer {
     margin-bottom: 5px;
 }
 
-.button-container button {
+.button-container a {
     background-color: #fff;
-    padding: 10px;
+    padding: 5px;
+    border: 1px solid black;
+    border-radius: 3px;
 }
 
 .project {
@@ -238,7 +244,7 @@ footer {
 }
 .form, .message, .tourist, .sejour {
     margin: auto;
-    max-width: 600px;
+    max-width: 300px;
     padding: 20px;
     margin-bottom: 20px;
     text-align: center;
@@ -264,7 +270,7 @@ footer {
 
 .age input, .voyage input{
     margin-bottom: 10px;
-    margin-left: 200px;
+    margin-left: 300px;
 }
 
 .message textarea {
@@ -302,11 +308,3 @@ footer {
     color: black;
     border: 2px solid turquoise;
 }
-
-
-
-=======
-=======
->>>>>>> Stashed changes
-}
->>>>>>> 32036340780dffcf20f9bec9a1dd77787829bc50
